--- a/MyCompany.NServiceBus.Gateway/appsettings.json
+++ b/MyCompany.NServiceBus.Gateway/appsettings.json
@@ -1,8 +1,8 @@
 {
   "NServiceBusOption": {
-    "EndpointName": "Achilles.Titan.Gateway.API.Host",
+    "EndpointName": "MyCompany.NServiceBus.Gateway.Host",
     "ConnectionString": "User ID=sa;Password=Admin123!@#;Server=.\\SQLExpress;Database=NServiceBus_SqlTransport;",
-    "FileBasedRouting": "endpoints.xml",
+    "FileBaseRouting": "endpoints.xml",
     "LicensePath": "",
     "ContractsPath": "/Contracts",
     "IsGateway": "true"
