Now enable docker build

--- a/src/Services/MyCompany.Scheduler/MyCompany.Scheduler/appsettings.json
+++ b/src/Services/MyCompany.Scheduler/MyCompany.Scheduler/appsettings.json
@@ -10,7 +10,7 @@
   "ScheduleOption": {
     "ScheduleCron": "*/2 * * * *",
     "Frequency": 2,
-    "URLGatewayAPI": "https://localhost:44341/Gateway/bus-queue"
+    "URLGatewayAPI": "http://192.168.1.217:5643/Gateway/bus-queue"
   },
   "ScheduleJobs": [
     {
