--- a/src/Services/MyCompany.NServiceBus/ContractsHandlers/MyCompany.NServiceBus.Sample.Host/appsettings.json
+++ b/src/Services/MyCompany.NServiceBus/ContractsHandlers/MyCompany.NServiceBus.Sample.Host/appsettings.json
@@ -1,7 +1,7 @@
 {
   "NServiceBusOption": {
     "EndpointName": "MyCompany.NServiceBus.Sample.Host",
-    "ConnectionString": "User ID=sa;Password=Admin123!@#;Server=.\\SQLExpress;Database=NServiceBus_SqlTransport;Pooling=true;",
+    "ConnectionString": "User ID=sa;Password=Admin123!@#;Server=192.168.1.217\\SQLExpress;Database=NServiceBus_SqlTransport;Pooling=true;",
     "LicensePath": "",
     "IsGateway": false
   },
