--- a/src/Services/MyCompany.NServiceBus/MyCompany.NServiceBus.Gateway/appsettings.json
+++ b/src/Services/MyCompany.NServiceBus/MyCompany.NServiceBus.Gateway/appsettings.json
@@ -1,7 +1,7 @@
 {
   "NServiceBusOption": {
     "EndpointName": "MyCompany.NServiceBus.Gateway.Host",
-    "ConnectionString": "User ID=sa;Password=Admin123!@#;Server=.\\SQLExpress;Database=NServiceBus_SqlTransport;",
+    "ConnectionString": "User ID=sa;Password=Admin123!@#;Server=192.168.1.217\\SQLExpress;Database=NServiceBus_SqlTransport;",
     "FileBaseRouting": "endpoints.xml",
     "LicensePath": "",
     "ContractsPath": "/Contracts",
